# xshttpd

./: .cvsignore  .hgignore  .hgtags  AUTHORS  BUGS  COPYING  COPYRIGHT  ChangeLog  MODULES  Makefile  Makefile.am  Makefile.original  README  WISHLIST  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure.ac  dirs.conf  hier.layout  httpd.1  interpret.methods  mkinstalldirs  php-wrapper  test
config/: Makefile.am  compress.methods.sample  httpd.conf.sample  mime.index  mime.types  script.methods.sample
contrib/: Makefile.am  SSL-Makefile  agentstats.pl  logrotate.sh  wwwstats.pl
fonts/: Makefile.am  digital0.ppm  digital1.ppm  digital2.ppm  digital3.ppm  digital4.ppm  digital5.ppm  digital6.ppm  digital7.ppm  digital8.ppm  digital9.ppm  large0.ppm  large1.ppm  large2.ppm  large3.ppm  large4.ppm  large5.ppm  large6.ppm  large7.ppm  large8.ppm  large9.ppm  largecol0.ppm  largecol1.ppm  largecol2.ppm  largecol3.ppm  largecol4.ppm  largecol5.ppm  largecol6.ppm  largecol7.ppm  largecol8.ppm  largecol9.ppm
icons/: Makefile.am
libcompat/: MD5Data.c  Makefile.am  closefrom.c  config.h  crypt.c  crypto_crypt.c  dummy.c  err.c  fgetln.c  fparseln.c  inet_aton.c  killpg.c  memmem.c  mkstemp.c  setenv.c  seteuid.c  setgroups.c  setproctitle.c  snprintf.c  srandomdev.c  strerror.c  strlcat.c  strlcpy.c  strndup.c  strptime.c  strsep.c
man/: Makefile.am  clearxs.1  gfxcount.1  html2man  httpd.1  httpd.1.in  httpd.conf.5  httpd.conf.5.in  httpd_cgi.7  httpd_ssi.7  httpdc.1  imagemap.1  readxs.1  xsauth.5  xschpass.1  xsconf.5  xsindex.1  xspasswd.1  xsredir.5  xsscripts.5
misc/: Makefile.am  SSL-Makefile  compress.methods  httpd.conf  httpd.conf.sample  mime.index  mime.types  persistent.pl  script.methods  script.methods.sample
src/: .cvsignore  Makefile.am  Modules.am  alternative.h  authenticate.c  authenticate.h  cgi.c  cgi.h  clearxs.c  cloader.c  cloader.h  compiler.h  confdetect.h  config.h  confpatch.h  confuser.h  constants.h  convert.c  convert.h  decode.c  decode.h  digcalc.c  digcalc.h  err.c  err.h  error.c  extra.c  extra.h  fcgi.c  fcgi.h  fcgi_api.h  gfxcount.c  hash.c  hash.h  htconfig.h  httpd.c  httpd.h  httpdc.c  httypes.h  imagemap.c  (+56 more)
