font_DATA = digital0.ppm digital1.ppm digital2.ppm digital3.ppm digital4.ppm \
	digital5.ppm digital6.ppm digital7.ppm digital8.ppm digital9.ppm \
	large0.ppm large1.ppm large2.ppm large3.ppm large4.ppm \
	large5.ppm large6.ppm large7.ppm large8.ppm large9.ppm \
	largecol0.ppm largecol1.ppm largecol2.ppm largecol3.ppm largecol4.ppm \
	largecol5.ppm largecol6.ppm largecol7.ppm largecol8.ppm largecol9.ppm
EXTRA_DIST = $(font_DATA)
